# trans_sent

./: .gitignore  README.md  compare_fp16_fp32.py  config.yaml  download_marianmt.py  example_fill_batch.py  extract_100k.py  init_project_structure.py  main_pipeline.py  negation_medical_translated_1_20250815-110321.txt  pyproject.toml  test_config_and_structure.py  translate_one_sentence.py  validate_config_structure.py
doc/: contexte data traduction nlp.txt  workflow1.txt  workflow3.txt  workflow4.txt  workflow5.txt  worklow2.txt
examples/: README.md  example_fill_batch.py  translate_one_sentence.py
pipeline/: analysis.py  archiving.py  batch_generation_en.py  batch_generation_fr.py  batch_status.py  parallel.py  postprocessing.py  preprocessing.py  reporting.py  step_logger.py  translation.py
scripts/: README.md
tests/: README.md  test_batch_format.py  test_config_and_structure.py  test_data_source.py
translations/batches/: en_batch_negation_medical_00001_00050.parquet  en_batch_negation_medical_00051_00100.parquet  fr_batch_negation_medical_00001_00050.parquet  fr_batch_negation_medical_00051_00100.parquet
translations/meta/: batch_info.parquet  fr_batch_info.parquet
utils/: config_loader.py  core.py  meta_utils.py
